# motologo

./: .gitignore  CMakeLists.txt  LICENSE  LOGO_FORMAT  README.md  config.h.in  image.hpp  logo.cpp  logo.hpp  logo2png  logo2png.cpp  png.cpp  png.hpp  png2logo  png2logo.cpp  readb.hpp
